--- a/1.IDE.md
+++ b/1.IDE.md
@@ -1,3 +1,13 @@
+# web(php)storm 时下流行库支持优化
+
+> 对 [git](http://baike.baidu.com/link?url=c-Bfn2X0hFmUBJ44lS7Imrz-5EgMoPASiUgRbf4urNGeUNMCBZK1m5Rcawfb07AX7eTqHMsoe75MSMZzfZiM2q) 支持很赞（.gitignore）
+
+> 对 [Markdown](http://baike.baidu.com/link?url=SX1FnI_-aV_4t3g8kCxZLrPt-VVyEi0fbfWefSS-TrXx-fsQlzt1O6qlI-_INCA49hfi9MQouHc3sKwtg2pGyFTKquki6_jKKkQrrm6PcSS) 支持友好
+
+> 内置支持 [Zen Coding](http://baike.baidu.com/link?url=jmJYMuPtd4ETI9pWULKZ9-KDhVsoM2Uj8mhvfIfin_aB0wm2HW3Ff7sWwOTIxB3Ik8tKF2SZBnvFGw5ENRh6ZLHnyNjMbwcbgTQCkO0TIfW)（Emmet），比如：`div>ul>li*8>img[src=img/$.jpg]`
+
+> 除本身对nodejs、less、sass、typescript、coffeescript...支持友好，还可以自行添加插件
+
 # web(php)storm 常用快捷键
 
 ## 注释/解注
@@ -43,11 +53,3 @@
 ## 多行文本前后处理
 
 按住 `Alt`
-
-
-
-
-
-
-
-
