--- a/1.IDE.md
+++ b/1.IDE.md
@@ -10,6 +10,8 @@
 
 ![开发环境预览](img/webstorm_ide.png)
 
+开发环境预览
+
 # web(php)storm 常用快捷键
 
 ## 注释/解注
@@ -57,3 +59,5 @@
 按住 `Alt`
 
 ![当使用正则表达式返回了想要的结果时程序员的样子](img/exp_enjoy.gif)
+
+当使用正则表达式返回了想要的结果时程序员的样子
