--- a/1.IDE.md
+++ b/1.IDE.md
@@ -1,3 +1,11 @@
+# 官网
+
+WebStorm：[http://www.jetbrains.com/webstorm/](http://www.jetbrains.com/webstorm/)
+
+PhpStorm：[http://www.jetbrains.com/phpstorm/](http://www.jetbrains.com/phpstorm/)
+
+付费软件，国内有破解，土豪请无视
+
 # web(php)storm 时下流行库支持友好
 
 > * 对 [git](http://baike.baidu.com/link?url=c-Bfn2X0hFmUBJ44lS7Imrz-5EgMoPASiUgRbf4urNGeUNMCBZK1m5Rcawfb07AX7eTqHMsoe75MSMZzfZiM2q) 支持很赞（.gitignore）
@@ -57,6 +65,10 @@
 ## 多行文本前后处理
 
 按住 `Alt`
+
+## 代码格式化
+
+`Ctrl + Alt + L`
 
 # 完
 
